k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
  labels:
    app.kubernetes.io/name: petclinic
  annotations:
    prometheus.io/scrape: 'true'
