k8s/db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-db
spec:
  ports:
    - port: 5432
  selector:
    role: backend
    tier: database

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-db
  labels:
    role: backend
    tier: database
spec:
  selector:
    matchLabels:
      role: backend
      tier: database
  template:
    metadata:
      labels:
        role: backend
        tier: database
    spec:
      containers:
        - image: postgres:18.4
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          livenessProbe:
            tcpSocket:
              port: postgresql
          readinessProbe:
            tcpSocket:
              port: postgresql
          startupProbe:
            tcpSocket:
              port: postgresql
