k8s/petclinic.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    role: frontend
    tier: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    role: frontend
    tier: web
spec:
  replicas: 1
  selector:
    matchLabels:
      role: frontend
      tier: web
  template:
    metadata:
      labels:
        role: frontend
        tier: web
    spec:
      containers:
        - name: workload
          image: dsyer/petclinic
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /livez
              port: http
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /livez
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            periodSeconds: 5
