k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-cloud-petclinic-service
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: kommander-traefik
  tls:
    - hosts:
        - petclinic.local
      secretName: petclinic-tls
  rules:
    - host: petclinic.local
      http:
        paths:
          - path: /pets
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port:
                  number: 80
